--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express-session": "^1.13.0",
     "mongodb": "^2.1.16",
     "passport": "^0.3.2",
-    "passport-twitter": "^1.0.4",
+    "passport-local": "^1.0.0",
     "xlsx": "^0.8.0"
   },
   "devDependencies": {
